--- a/Tarea2_RSlay_RGutierrez.ipynb
+++ b/Tarea2_RSlay_RGutierrez.ipynb
@@ -27,6 +27,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Librerías a usar en todo el programa\n",
+    "import numpy as np\n",
+    "import time,math \n",
+    "import matplotlib.pyplot as plt\n",
+    "from functools import reduce\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,16 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('34587', 163.8),\n",
+       " ('98762', 284.0),\n",
+       " ('77226', 108.85000000000001),\n",
+       " ('88112', 84.97)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "ans = list(map(lambda x: (x[0], x[2] * x[3]) if x[2] * x[3] >= 100 else (x[0], x[2] * x[3] + 10), orders))\n",
+    "ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 688.3299999999999),\n",
+       " (2, 504.46000000000004),\n",
+       " (3, 374.79999999999995),\n",
+       " (4, 502.57)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "def increase(x):\n",
+    "    if x >= 100:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return x + 10\n",
+    "\n",
+    "ad = lambda a,b:a + b\n",
+    "\n",
+    "ans2 = list(map(lambda x: (x[0], np.add.reduce(np.array(list(map(lambda y:increase(y[1] * y[2]) , x[1:] ))))) , orders))\n",
+    "ans2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +186,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>ans</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34587</td>\n",
+       "      <td>Learning Python, Mark Lutz</td>\n",
+       "      <td>4</td>\n",
+       "      <td>40.95</td>\n",
+       "      <td>163.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>98762</td>\n",
+       "      <td>Programming Python, Mark Lutz</td>\n",
+       "      <td>5</td>\n",
+       "      <td>56.80</td>\n",
+       "      <td>284.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>77226</td>\n",
+       "      <td>Head First Python, Paul Barry</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.95</td>\n",
+       "      <td>108.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88112</td>\n",
+       "      <td>Einführung in Python3, Bernd Klein</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24.99</td>\n",
+       "      <td>84.97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0                                   1  2      3     ans\n",
+       "0  34587          Learning Python, Mark Lutz  4  40.95  163.80\n",
+       "1  98762       Programming Python, Mark Lutz  5  56.80  284.00\n",
+       "2  77226       Head First Python, Paul Barry  3  32.95  108.85\n",
+       "3  88112  Einführung in Python3, Bernd Klein  3  24.99   84.97"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+    "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+    "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
+    "           [\"88112\", \"Einführung in Python3, Bernd Klein\", 3, 24.99]]\n",
+    "\n",
+    "orders2 = [[1, (\"5464\", 4, 9.99), (\"8274\",18,12.99), (\"9744\", 9, 44.95)], \n",
+    "          [2, (\"5464\", 9, 9.99), (\"9744\", 9, 44.95)],\n",
+    "          [3, (\"5464\", 9, 9.99), (\"88112\", 11, 24.99)],\n",
+    "          [4, (\"8732\", 7, 11.99), (\"7733\",11,18.99), (\"88112\", 5, 39.95)] ]\n",
+    "\n",
+    "orders = pd.DataFrame(orders)\n",
+    "orders2 = pd.DataFrame(orders2)\n",
+    "\n",
+    "orders['ans'] = orders.iloc[:,2] * orders.iloc[:,3]\n",
+    "orders['ans'] = orders['ans'].apply(increase)\n",
+    "orders"
    ]
   },
   {
@@ -158,11 +306,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['notion',\n",
+       " 'lambda',\n",
+       " 'function',\n",
+       " 'goes',\n",
+       " 'back',\n",
+       " 'origin',\n",
+       " 'computer',\n",
+       " 'science']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "lista = \"the notion of a lambda function goes all the way back to the origin of computer science\"\n",
+    "\n",
+    "lista = lista.split()\n",
+    "\n",
+    "ans = list(filter(lambda x: len(x) >= 4,lista))\n",
+    "ans"
    ]
   },
   {
@@ -183,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,11 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4666666666666667"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "temp = np.array(temperatures)\n",
+    "crct = list(filter(lambda x: x >= 32 and x <= 80,temp))\n",
+    "ans = len(crct) / len(temp)\n",
+    "#Desarrollado para tener mayor claridad, aunque es innecesaria la variable de crct\n",
+    "ans"
    ]
   },
   {
@@ -235,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,11 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 2], [0, 2])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##E1"
+    "##E1\n",
+    "point_xy = np.array(point_xy)\n",
+    "ans = list(np.minimum.reduce(point_xy))\n",
+    "# Nos devuelve la X mas pequena y la y mas pequena pero no juntas\n",
+    "\n",
+    "f = lambda a,b: a if (a < b) else b\n",
+    "ans2 = [reduce(f,point_xy[:,0]),reduce(f,point_xy[:,1])]\n",
+    "ans, ans2"
    ]
   },
   {
